--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: America/Toronto
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Dreller's Blog   # the main title
+title: Dreller's Blog # the main title
 
 tagline: What's on my Dev Mind # it will display as the subtitle
 
@@ -32,13 +32,13 @@ twitter:
   username: # change to your Twitter username
 
 social:
-# Change to your full name.
-# It will be displayed as the default author of the posts and the copyright owner in the Footer
+  # Change to your full name.
+  # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Dreller
   email: dreller2034@gmail.com # change to your email address
   links:
-#    # The first element serves as the copyright owner's link
-#    - https://twitter.com/username # change to your Twitter homepage
+    #    # The first element serves as the copyright owner's link
+    #    - https://twitter.com/username # change to your Twitter homepage
     - https://github.com/dreller # change to your GitHub homepage
 # Uncomment below to add more social links
 # - https://www.facebook.com/username
@@ -150,7 +150,7 @@ pwa:
 paginate: 10
 
 # The base URL of your site
-baseurl: "https://dreller.github.io"
+baseurl: ""
 
 # ------------ The following options are not recommended to be modified ------------------
 
